guestbook-chart/templates/guestbook-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: guestbook
spec:
  tls:
  - hosts:
    - guestbook.mstakx.io
    secretName: production-guestbook
  rules:
  - host: guestbook.mstakx.io
    http:
      paths:
      - path: /
        backend:
          serviceName: guestbook
          servicePort: 3000
